# csc317-showcase

./: .gitignore  CMakeLists.txt  README.md  main_showcase.cpp
cmake/: libigl.cmake
include/: JelloMesh.h  JelloState.h  fast_mass_springs_step_sparse.h  read_json.h  showcase_utils.h
src/: JelloMesh.cpp  fast_mass_springs_precomputation_dense.cpp  fast_mass_springs_precomputation_sparse.cpp  fast_mass_springs_step_dense.cpp  fast_mass_springs_step_sparse.cpp  showcase_utils.cpp  signed_incidence_matrix_dense.cpp  signed_incidence_matrix_sparse.cpp
